# AOC

./: .gitignore  AOC2019Prob3.py  AOC2019Problem4.py  AOCProblem2.py  AOCProblem3.py  AOCProblem4.py  AOCProblem4B.py  AOCProblem5.py  adventofcodeProblem1.py
AOC2015/: AOC20151  AOC20151.py  AOC20152.py  AOC20153.py  AOC20154.py  AOC20155.py
AOC2017/: AOCProblem5.py
AOC2019/: AOC 2019 #1.py  AOC2019Prob3.py  AOC2019Problem2.py  AOC2019Problem2description.txt
AOC2021/: AOC1_2.rb  Gemfile
AOC2021/AOC1/: AOC1_1.rb
AOC2021/AOC2/: AOC2_1.rb  AOC2_2.rb
AOC2021/AOC3/: AOC3_1.rb  AOC3_2.rb
AOC2021/AOC4/: AOC4_1.go  AOC4_1.rb  bingocard.rb  go.mod  playingaround.go  problemdescription.txt
AOC2021/AOC5/: AOC5  AOC5_1.go  go.mod  go.sum
AOC2021/AOC6/: AOC6  AOC6.go  go.mod  notes.md  output
AOC2021/AOC7/: main  main.go  notes.md
AOC2021/AOC8/: AOC8.md  main.go
AOC2021/AOC9/: AOC9.md  go.mod  go.sum  main.go  temppuzzleinput.txt
AOC2023/: Cargo.toml
AOC2023/day1/: Cargo.toml  day1.md
AOC2023/day1/src/: lib.rs
AOC2023/src/: days.rs  main.rs
AOC2023/src/days/day2/: day2.md  day2.rs
AOC2023/src/days/day4/: day4.rs
old/: .gitignore  AOCProblem3.py  AOCProblem4B.py
